shoulda fixed icons on mobiles not being totally shown on first display

--- a/components/ContactMe/contact.module.scss
+++ b/components/ContactMe/contact.module.scss
@@ -18,5 +18,5 @@
 }
 
 .searchbarPlaceholder {
-  height: 1rem;
+  height: 1.5rem;
 }
