--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -10,14 +10,13 @@
 
 .homeTitle {
   width: 100vw;
-  // height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 1rem 2rem;
   color: #000;
-  flex-grow: 1;
 }
 
 .light .homeTitle {
